2005-03-27  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tlrequest.c: In Ns_RegisterFilterObj command 'when'
	  was not initialized with 0 and because this is Ored flags
	  registered filters had incorrect mask.

2005-03-26  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/proc.c:
	* nsd/tclrequest.c: Convert to new callback and parse proc APIs.
	Remove support for old connId parameter.

	* tcl/file.tcl:
	* tcl/util.tcl: Remove support for old connId parameter.
	
	* include/ns.h:
	* nsd/nsd.h:
	* nsd/Makefile:
	* nsd/tclcallbacks.c: Add routines to support calling Tcl code
	from C for callback events. (RFE #1162223)

	* nsd/proc.c:
	* nsd/tclcmds.c:
	* nsd/tclsched.c: Update to use new callback and parse proc APIs.
	
	* include/ns.h:
	* nsd/Makefile:
	* nsd/tclcmds.c:
	* nsd/cookies.c: Add cookie API for C and Tcl.  (RFE #1145957)

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/tclobjv.c:
	* nsd/tclcmds.c:
	* tests/ns_parseargs.test: Change the signature of Ns_ObjvProc()s
	to return either TCL_OK, TCL_ERROR or TCL_BREAK.  Fixes a bug
	where options were being double-counted as args.  Also simplified
	the Ns_ObjvProc interface by passing the Ns_ObjvSpec directly.

	Added a new Tcl command: ns_parseargs specification args.  It
	parses options, args and handles defaults.

	* nsd/tclobj.c: Added some wrapper procs for handling Tcl obj
	types.

	* nsd/tclinit.c: Added Ns_TclPrintfResult() as a convenience for
	writing ints into a formatted string result.

2005-03-23  Vlad Seryakov <vlad@crystalballinc.com>

         include/ns.h:  Make Ns_SockBindUdp public function, it is public in
         nsd/binder.c already.

2005-03-22  Vlad Seryakov <vlad@crystalballinc.com>

         nsd/driver.c:  Ensure that socket driver's DriverClose callback 
         gets executed when the socket is released.  This was causing a 
         memory leak for HTTPS connections with nsopenssl when a Keep-Alive 