@@ -466,3 +466,58 @@ FreeReq(void *arg)
     }
 }
 
+/*
+ *----------------------------------------------------------------------
+ *
+ * NsRequestArgProc --
+ *
+ *      Proc info routine to copy Tcl request proc.
+ *
+ * Results:
+ *      None.
+ *      
+ * Side effects:
+ *      Will copy script to given dstring.
+ *
+ *----------------------------------------------------------------------
+ */
+ 
+void
+NsTclRequestArgProc(Tcl_DString *dsPtr, void *arg)
+{
+     Req *reqPtr = arg;
+
+     Ns_GetProcInfo(dsPtr, (void *) reqPtr->proc, reqPtr->arg);
+}
+
+
+/*
+ *----------------------------------------------------------------------
+ * NsGetRequestProcs --
+ *
+ *      Returns information about registered requests/procs
+ * 
+ * Results:
+ *      DString with info as Tcl list
+ *
+ * Side effects:
+ *      None
+ *
+ *----------------------------------------------------------------------
+ */
+ 
+void
+NsGetRequestProcs(Tcl_DString *dsPtr, char *server)
+{
+    NsServer *servPtr;
+ 
+    servPtr = NsGetServer(server);
+    if (servPtr == NULL) {
+        return;
+    }
+ 
+    Ns_MutexLock(&ulock);
+    NsUrlSpecificWalk(uid, servPtr->server, NsTclRequestArgProc, dsPtr);
+    Ns_MutexUnlock(&ulock);
+}
+
